button fix on mobile attempt

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,10 +5,6 @@
   --foreground: #171717;
 }
 
-* {
-  outline: 1px solid red !important;
-}
-
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
